--- a/covid-order/style.css
+++ b/covid-order/style.css
@@ -35,3 +35,11 @@ select:focus {
 select:hover {
   color: #ffffff;
 }
+
+@media (max-width: 829px) {
+  select {
+    font-size: 29px;
+    font-weight: 500;
+    min-width: 400px;
+  }
+}
