--- a/covid-order/style.css
+++ b/covid-order/style.css
@@ -48,7 +48,11 @@ select:hover {
     min-width: 400px;
   }
   .row {
-      margin-left: -5px;
+    margin-left: -5px;
+  }
+
+  td {
+    white-space: initial!important;
   }
 }
 
