--- a/covid-order/style.css
+++ b/covid-order/style.css
@@ -68,3 +68,34 @@ th {
   background-color: #74d3dc;
   border-color: #74d3dc;
 }
+
+.pagination > li > a
+{
+    background-color: white;
+    color: #74d3dc;
+}
+
+.pagination > li > a:focus,
+.pagination > li > a:hover,
+.pagination > li > span:focus,
+.pagination > li > span:hover
+{
+    color: #5a5a5a;
+    background-color: #eee;
+    border-color: #ddd;
+}
+
+.pagination > .active > a
+{
+    color: white;
+    background-color: #74d3dc !important;
+    border: solid 1px #74d3dc !important;
+}
+
+.pagination > .active > a:hover
+{
+    background-color: #74d3dc !important;
+    border: solid 1px #74d3dc;
+}
+
+
