--- a/covid-order/style.css
+++ b/covid-order/style.css
@@ -40,27 +40,6 @@ select:hover {
   margin-left: 0px;
 }
 
-@media (max-width: 829px) {
-  select {
-    font-size: 29px;
-    font-weight: 500;
-    min-width: 320px;
-    max-width: 320px;
-    margin-bottom: 12px;
-  }
-  .row {
-    margin-left: -5px;
-  }
-
-  td {
-    white-space: initial!important;
-  }
-
-  h1 {
-    font-size: 2.0rem;
-  }
-}
-
 th {
   background-color: #74d3dc;
 }
@@ -105,4 +84,59 @@ th {
 
 .dataTables_info {
   white-space: normal!important;
+}
+
+#loader {
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  border: 32px solid #f3f3f3; /* Light grey */
+  border-top: 32px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
+  animation: spin 2s linear infinite;
+  z-order: 9999;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@media (max-width: 829px) {
+  select {
+    font-size: 29px;
+    font-weight: 500;
+    min-width: 320px;
+    max-width: 320px;
+    margin-bottom: 12px;
+  }
+  .row {
+    margin-left: -5px;
+  }
+
+  td {
+    white-space: initial!important;
+  }
+
+  h1 {
+    font-size: 2.0rem;
+  }
+
+  #loader {
+    position: absolute;
+    top: 50%;
+    left: 40%;
+  }
+}
+@media (max-width: 600px) {
+  #loader {
+    position: absolute;
+    top: 50%;
+    left: 28%;
+  }
 }
