--- a/covid-order/style.css
+++ b/covid-order/style.css
@@ -99,7 +99,7 @@ th {
   width: 180px;
   height: 180px;
   animation: spin 2s linear infinite;
-  z-order: 9999;
+  z-index: 9999;
 }
 
 @keyframes spin {
