Colour match the spinner

--- a/covid-order/style.css
+++ b/covid-order/style.css
@@ -94,7 +94,7 @@ th {
   -webkit-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
   border: 32px solid #f3f3f3; /* Light grey */
-  border-top: 32px solid #3498db; /* Blue */
+  border-top: 32px solid #74d3dc; /* Blue */
   border-radius: 50%;
   width: 180px;
   height: 180px;
